--- a/app/src/main/res/layout/item_load_state.xml
+++ b/app/src/main/res/layout/item_load_state.xml
@@ -10,7 +10,6 @@
         android:layout_height="32dp"/>
 
     <LinearLayout
-        android:id="@+id/retry"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="wrap_content"
@@ -20,12 +19,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Error"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/retry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Retry"/>
+            android:text="Retry" />
 
     </LinearLayout>
 
